# NLP-GDP-INFLATION-MEX

./: .gitignore  README.md  pyproject.toml
utils/: clarity_metrics.py  eda_analysis.py  extract_corpus.py  metada.py  preprocessing.py  scrape_banxico.py  scrape_news.py  sentiment_heuristics.py  tfidf.py  visualizations.py  word2vec.py
