[project]
name = "nlp-gdp-inflation-mx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "feedparser>=6.0.11",
    "fitz>=0.0.1.dev2",
    "ftfy>=6.3.1",
    "gensim>=4.3.3",
    "langdetect>=1.0.9",
    "lxml-html-clean>=0.4.2",
    "matplotlib>=3.10.3",
    "newspaper3k>=0.2.8",
    "nltk>=3.9.1",
    "pandas>=2.2.3",
    "pdfplumber>=0.11.6",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "serpapi>=0.1.5",
    "stanza>=1.10.1",
]
